src/widgets/snapshots/tvision_rs__widgets__scrollbar__tests__snapshot_vertical_scrollbar_no_range.snap
---
source: src/widgets/scrollbar.rs
expression: screen.snapshot()
---
size: 1x6
cursor: hidden
text:
|▲|
|▓|
|▓|
|▓|
|▓|
|▼|
attr:
|a|
|a|
|a|
|a|
|a|
|a|
legend:
  . default
  a fg=RGB(0,0,170) bg=RGB(0,170,170)
